--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p data-testid="currentDayOfTheWeek">Current Day of the Week: <span id="dayOfWeek"></span></p>
         <p data-testid="currentUTCTime">Current UTC Time: <span id="utcTime"></span></p>
         <p data-testid="myTrack">Track: Frontend</p>
-        <a href="https://github.com/Trezie" data-testid="githubURL">GitHub Repository</a>
+        <a href="https://github.com/Trezie/HNG-Stage-1" data-testid="githubURL">GitHub Repository</a>
     </div>
 
     <script src="script.js"></script>
