--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <h1 data-testid="slackUserName">Ifeoma Okafor</h1>
         <img src="image/ify.JPG" alt="" data-testid="slackDisplayImage" class="image">
-        <p data-testid="currentDayOfTheWeek">Current Day of the Week: <span id="dayOfWeek"></span></p>
-        <p data-testid="currentUTCTime">Current UTC Time: <span id="utcTime"></span></p>
-        <p data-testid="myTrack">Track: Frontend</p>
+        <p data-testid="currentDayOfTheWeek"> <span id="dayOfWeek"></span></p>
+        <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
+        <p data-testid="myTrack">Frontend</p>
         <a href="https://github.com/Trezie/HNG-Stage-1" data-testid="githubURL">GitHub Repository</a>
     </div>
 
