--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="image/ify.JPG" alt="" data-testid="slackDisplayImage" class="image">
         <p data-testid="currentDayOfTheWeek"> <p id="dayOfWeek"></p></p>
         <p data-testid="currentUTCTime"><p id="utcTime"></p></p>
-        <p data-testid="myTrack">Frontend</p>
+        <p data-testid="myTrack" class="frontend">Frontend</p>
         <a href="https://github.com/Trezie/HNG-Stage-1" data-testid="githubURL">GitHub Repository</a>
     </div>
 
