--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="card">
         <h1 data-testid="slackUserName">Ifeoma Okafor</h1>
         <img src="image/ify.JPG" alt="" data-testid="slackDisplayImage" class="image">
         <p data-testid="currentDayOfTheWeek"> <p id="dayOfWeek"></p></p>
