--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="card">
         <h1 data-testid="slackUserName">Ifeoma Okafor</h1>
         <img src="image/ify.JPG" alt="" data-testid="slackDisplayImage" class="image">
-        <p data-testid="currentDayOfTheWeek"> <p id="dayOfWeek"></p></p>
-        <p data-testid="currentUTCTime"><p id="utcTime"></p></p>
+        <p data-testid="currentDayOfTheWeek"> <span id="dayOfWeek"></span></p>
+        <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
         <p data-testid="myTrack" class="frontend">Frontend</p>
         <a href="https://github.com/Trezie/HNG-Stage-1" data-testid="githubURL">GitHub Repository</a>
     </div>
